--- a/wp-content/themes/mytheme/style.css
+++ b/wp-content/themes/mytheme/style.css
@@ -15,6 +15,10 @@ body {
   line-height: 1.5;
 }
 
+h1 {
+  word-wrap: break-word;
+}
+
 /*　------------------------　基本構造　------------------------　*/
 
 /* ヘッダーとフッターをバーの形にする設定 */
